INFT-3149 - z-index of social media buttons fixed

--- a/sass/_scss/infopaginas.scss
+++ b/sass/_scss/infopaginas.scss
@@ -2793,7 +2793,7 @@ $thumb-width-mb: 60px;
   position: absolute;
   display: block;
   right: 0px;
-  z-index: 99999;
+  z-index: 1;
   overflow: hidden;
 
   .sidebar__section {
